--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="tipo">Eletrico</span>
 
                         <div class="cartao-imagem">
-                            <img src="/src/imagens/pikachu.png" alt="Imagem do Pikachu">
+                            <img src="src/imagens/pikachu.png" alt="Imagem do Pikachu">
                         </div>
 
                     </div>
@@ -71,7 +71,7 @@
                         <span class="tipo">Planta</span>
 
                         <div class="cartao-imagem">
-                            <img src="/src/imagens/bulbasaur.png" alt="Imagem do Bulbasaur">
+                            <img src="src/imagens/bulbasaur.png" alt="Imagem do Bulbasaur">
                         </div>
 
                     </div>
@@ -111,7 +111,7 @@
                         <span class="tipo">Fogo</span>
 
                         <div class="cartao-imagem">
-                            <img src="/src/imagens/charmander.png" alt="Imagem do Charmander">
+                            <img src="src/imagens/charmander.png" alt="Imagem do Charmander">
                         </div>
 
                     </div>
@@ -151,7 +151,7 @@
                         <span class="tipo">Água</span>
 
                         <div class="cartao-imagem">
-                            <img src="/src/imagens/gyarados.png" alt="Imagem do Gyarados">
+                            <img src="src/imagens/gyarados.png" alt="Imagem do Gyarados">
                         </div>
 
                     </div>
@@ -191,7 +191,7 @@
                         <span class="tipo">Fantasma</span>
 
                         <div class="cartao-imagem">
-                            <img src="/src/imagens/gengar.png" alt="Imagem do Gengar">
+                            <img src="src/imagens/gengar.png" alt="Imagem do Gengar">
                         </div>
 
                     </div>
@@ -231,7 +231,7 @@
                         <span class="tipo">Dragão</span>
 
                         <div class="cartao-imagem">
-                            <img src="/src/imagens/dragonite.png" alt="Imagem do Dragonite">
+                            <img src="src/imagens/dragonite.png" alt="Imagem do Dragonite">
                         </div>
 
                     </div>
